--- a/project.config.json
+++ b/project.config.json
@@ -16,7 +16,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.11.0",
-	"appid": "wx889b61365c2886e6",
+	"appid": "wx4019faa8015bf3ca",
 	"projectname": "acanvas",
 	"debugOptions": {
 		"hidedInDevtools": []
